--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --color-accent: #1b4965;
   --color-secondary: #ffb703;
   --color-background: #ffffff;
-  --color-text: #333333;
+  --color-foreground: #333333;
 
   --color-orange-primary-50: #fff5ed;
   --color-orange-primary-100: #ffe9d4;
@@ -78,7 +78,7 @@
   }
 
   body {
-    @apply bg-background text-text;
+    @apply bg-background text-foreground;
   }
   :root {
     --radius: 0.5rem;
